--- a/src/main/java/com/migusdn/EzMacro/GUI/TaskList_UI.form
+++ b/src/main/java/com/migusdn/EzMacro/GUI/TaskList_UI.form
@@ -189,7 +189,7 @@
                       <text value="XPath, ClassName, Element ID"/>
                     </properties>
                   </component>
-                  <component id="17833" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                  <component id="17833" class="javax.swing.JComboBox" binding="targetType">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -200,6 +200,7 @@
                         <item value="id"/>
                         <item value="className"/>
                         <item value="css"/>
+                        <item value="linktext"/>
                       </model>
                     </properties>
                   </component>
